--- a/config.h.in
+++ b/config.h.in
@@ -64,7 +64,7 @@
 /* Define to 1 if the system has the type `fd_mask'. */
 #undef HAVE_FD_MASK
 
-/* Define to 1 if you have the `getaddrinfo' function. */
+/* Do we have getaddrinfo()? */
 #undef HAVE_GETADDRINFO
 
 /* Define to 1 if you have the `getegid' function. */
@@ -135,6 +135,9 @@
 
 /* Define if the system has openssl */
 #undef HAVE_OPENSSL
+
+/* Define to 1 if you have the <openssl/bio.h> header file. */
+#undef HAVE_OPENSSL_BIO_H
 
 /* Define to 1 if you have the `pipe' function. */
 #undef HAVE_PIPE
@@ -235,6 +238,9 @@
 /* Define to 1 if `sin_len' is a member of `struct sockaddr_in'. */
 #undef HAVE_STRUCT_SOCKADDR_IN_SIN_LEN
 
+/* Define to 1 if the system has the type `struct sockaddr_storage'. */
+#undef HAVE_STRUCT_SOCKADDR_STORAGE
+
 /* Define to 1 if `ss_family' is a member of `struct sockaddr_storage'. */
 #undef HAVE_STRUCT_SOCKADDR_STORAGE_SS_FAMILY
 
@@ -334,9 +340,15 @@
 /* Define if kqueue works correctly with pipes */
 #undef HAVE_WORKING_KQUEUE
 
+/* Define to 1 if you have the <zlib.h> header file. */
+#undef HAVE_ZLIB_H
+
 /* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
 #undef LT_OBJDIR
+
+/* Define to 1 if your C compiler doesn't accept -c and -o together. */
+#undef NO_MINUS_C_MINUS_O
 
 /* Numeric representation of the version */
 #undef NUMERIC_VERSION
