--- a/sample/Makefile.in
+++ b/sample/Makefile.in
@@ -56,30 +56,33 @@ PROGRAMS = $(noinst_PROGRAMS)
 dns_example_SOURCES = dns-example.c
 dns_example_OBJECTS = dns-example.$(OBJEXT)
 dns_example_LDADD = $(LDADD)
-dns_example_DEPENDENCIES = ../libevent.la
+am__DEPENDENCIES_1 =
+dns_example_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 event_test_SOURCES = event-test.c
 event_test_OBJECTS = event-test.$(OBJEXT)
 event_test_LDADD = $(LDADD)
-event_test_DEPENDENCIES = ../libevent.la
+event_test_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 hello_world_SOURCES = hello-world.c
 hello_world_OBJECTS = hello-world.$(OBJEXT)
 hello_world_LDADD = $(LDADD)
-hello_world_DEPENDENCIES = ../libevent.la
+hello_world_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 http_server_SOURCES = http-server.c
 http_server_OBJECTS = http-server.$(OBJEXT)
 http_server_LDADD = $(LDADD)
-http_server_DEPENDENCIES = ../libevent.la
+http_server_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 le_proxy_SOURCES = le-proxy.c
 le_proxy_OBJECTS = le-proxy.$(OBJEXT)
-@OPENSSL_TRUE@le_proxy_DEPENDENCIES = $(LDADD) ../libevent_openssl.la
+am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) ../libevent.la
+@OPENSSL_TRUE@le_proxy_DEPENDENCIES = $(am__DEPENDENCIES_2) \
+@OPENSSL_TRUE@	../libevent_openssl.la
 signal_test_SOURCES = signal-test.c
 signal_test_OBJECTS = signal-test.$(OBJEXT)
 signal_test_LDADD = $(LDADD)
-signal_test_DEPENDENCIES = ../libevent.la
+signal_test_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 time_test_SOURCES = time-test.c
 time_test_OBJECTS = time-test.$(OBJEXT)
 time_test_LDADD = $(LDADD)
-time_test_DEPENDENCIES = ../libevent.la
+time_test_DEPENDENCIES = $(am__DEPENDENCIES_1) ../libevent.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp =
 am__depfiles_maybe =
@@ -114,12 +117,15 @@ CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+EV_LIB_GDI = @EV_LIB_GDI@
+EV_LIB_WS32 = @EV_LIB_WS32@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GREP = @GREP@
@@ -130,6 +136,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBEVENT_GC_SECTIONS = @LIBEVENT_GC_SECTIONS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
@@ -138,6 +145,7 @@ LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
@@ -168,6 +176,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 acx_pthread_config = @acx_pthread_config@
@@ -217,7 +226,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
-LDADD = ../libevent.la
+LDADD = $(LIBEVENT_GC_SECTIONS) ../libevent.la
 AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/compat -I$(top_srcdir)/include -I../include
 event_test_sources = event-test.c
 time_test_sources = time-test.c
@@ -226,7 +235,7 @@ dns_example_sources = dns-example.c
 hello_world_sources = hello-world.c
 http_server_sources = http-server.c
 @OPENSSL_TRUE@le_proxy_sources = le-proxy.c
-@OPENSSL_TRUE@le_proxy_LDADD = $(LDADD) ../libevent_openssl.la -lcrypto -lssl
+@OPENSSL_TRUE@le_proxy_LDADD = $(LDADD) ../libevent_openssl.la
 DISTCLEANFILES = *~
 all: all-am
 
