--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
 Uploaders: Leo Costela <costela@debian.org>
-Build-Depends: debhelper (>= 7), autotools-dev, libtool, libssl-dev
+Build-Depends: debhelper (>= 8), autotools-dev, libssl-dev
 Standards-Version: 3.9.1
 Homepage: http://www.monkey.org/~provos/libevent/
 Vcs-Browser: http://anonscm.debian.org/git/collab-maint/libevent.git
