--- a/Makefile.in
+++ b/Makefile.in
@@ -50,11 +50,11 @@ host_triplet = @host@
 @SIGNAL_SUPPORT_TRUE@am__append_11 = signal.c
 @INSTALL_LIBEVENT_FALSE@am__append_12 = $(EVENT1_HDRS)
 subdir = .
-DIST_COMMON = README $(am__configure_deps) $(am__include_HEADERS_DIST) \
-	$(am__noinst_HEADERS_DIST) $(dist_bin_SCRIPTS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
-	$(srcdir)/config.h.in $(srcdir)/libevent.pc.in \
-	$(srcdir)/libevent_openssl.pc.in \
+DIST_COMMON = README $(am__configure_deps) \
+	$(am__dist_bin_SCRIPTS_DIST) $(am__include_HEADERS_DIST) \
+	$(am__noinst_HEADERS_DIST) $(srcdir)/Makefile.am \
+	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
+	$(srcdir)/libevent.pc.in $(srcdir)/libevent_openssl.pc.in \
 	$(srcdir)/libevent_pthreads.pc.in $(top_srcdir)/configure \
 	ChangeLog compile config.guess config.sub depcomp epoll_sub.c \
 	install-sh ltmain.sh missing
@@ -181,6 +181,7 @@ libevent_pthreads_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 @INSTALL_LIBEVENT_FALSE@@PTHREADS_TRUE@am_libevent_pthreads_la_rpath =
 @INSTALL_LIBEVENT_TRUE@@PTHREADS_TRUE@am_libevent_pthreads_la_rpath =  \
 @INSTALL_LIBEVENT_TRUE@@PTHREADS_TRUE@	-rpath $(libdir)
+am__dist_bin_SCRIPTS_DIST = event_rpcgen.py
 SCRIPTS = $(dist_bin_SCRIPTS)
 DEFAULT_INCLUDES = -I.@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -423,7 +424,7 @@ RELEASE = -release 2.0
 #
 # Once an RC is out, DO NOT MAKE ANY ABI-BREAKING CHANGES IN THAT SERIES
 # UNLESS YOU REALLY REALLY HAVE TO.
-VERSION_INFO = 6:1:1
+VERSION_INFO = 6:2:1
 
 # History:          RELEASE    VERSION_INFO
 #  2.0.1-alpha --     2.0        1:0:0
@@ -438,6 +439,7 @@ VERSION_INFO = 6:1:1
 #  2.0.10-stable--    2.0        5:1:0 (No ABI change)
 #  2.0.11-stable--    2.0        6:0:1 (ABI changed, backward-compatible)
 #  2.0.12-stable--    2.0        6:1:1 (No ABI change)
+#  2.0.13-stable--    2.0        6:2:1 (No ABI change)
 #
 # For Libevent 2.1:
 #  2.1.1-alpha --     2.1        1:0:0
@@ -459,7 +461,7 @@ VERSION_INFO = 6:1:1
 # nice and rare.  For the next couple of years, though, 'struct event'
 # is user-visible, and so we can pretty much guarantee that release
 # series won't be binary-compatible.
-dist_bin_SCRIPTS = event_rpcgen.py
+@INSTALL_LIBEVENT_TRUE@dist_bin_SCRIPTS = event_rpcgen.py
 pkgconfigdir = $(libdir)/pkgconfig
 LIBEVENT_PKGCONFIG = libevent.pc $(am__append_2) $(am__append_4)
 
@@ -472,6 +474,7 @@ PLATFORM_DEPENDENT_SRC = \
 EXTRA_DIST = \
 	LICENSE \
 	autogen.sh \
+	event_rpcgen.py \
 	libevent.pc.in \
 	Doxyfile \
 	whatsnew-2.0.txt \
