--- a/sample/Makefile.in
+++ b/sample/Makefile.in
@@ -81,7 +81,7 @@ am__le_proxy_SOURCES_DIST = le-proxy.c
 le_proxy_OBJECTS = $(am_le_proxy_OBJECTS)
 am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) ../libevent.la
 @OPENSSL_TRUE@le_proxy_DEPENDENCIES = $(am__DEPENDENCIES_2) \
-@OPENSSL_TRUE@	../libevent_openssl.la
+@OPENSSL_TRUE@	../libevent_openssl.la $(am__DEPENDENCIES_1)
 am_signal_test_OBJECTS = signal-test.$(OBJEXT)
 signal_test_OBJECTS = $(am_signal_test_OBJECTS)
 signal_test_LDADD = $(LDADD)
@@ -162,6 +162,7 @@ NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OPENSSL_LIBADD = @OPENSSL_LIBADD@
 OPENSSL_LIBS = @OPENSSL_LIBS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
@@ -246,7 +247,7 @@ dns_example_SOURCES = dns-example.c
 hello_world_SOURCES = hello-world.c
 http_server_SOURCES = http-server.c
 @OPENSSL_TRUE@le_proxy_SOURCES = le-proxy.c
-@OPENSSL_TRUE@le_proxy_LDADD = $(LDADD) ../libevent_openssl.la -lssl -lcrypto
+@OPENSSL_TRUE@le_proxy_LDADD = $(LDADD) ../libevent_openssl.la -lssl -lcrypto ${OPENSSL_LIBADD}
 DISTCLEANFILES = *~
 all: all-am
 
