--- a/configure.in
+++ b/configure.in
@@ -11,9 +11,9 @@ AC_INIT(event.c)
 
 AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE(libevent,2.0.18-stable)
+AM_INIT_AUTOMAKE(libevent,2.0.19-stable)
 AM_CONFIG_HEADER(config.h)
-AC_DEFINE(NUMERIC_VERSION, 0x02001200, [Numeric representation of the version])
+AC_DEFINE(NUMERIC_VERSION, 0x02001300, [Numeric representation of the version])
 
 dnl Initialize prefix.
 if test "$prefix" = "NONE"; then
@@ -41,12 +41,21 @@ AC_PROG_MKDIR_P
 
 AC_PROG_GCC_TRADITIONAL
 
+# We need to test for at least gcc 2.95 here, because older versions don't
+# have -fno-strict-aliasing
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([], [
+#if !defined(__GNUC__) || (__GNUC__ < 2) || (__GNUC__ == 2 && __GNUC_MINOR__ < 95)
+#error
+#endif])], have_gcc295=yes, have_gcc295=no)
+
 if test "$GCC" = "yes" ; then
         # Enable many gcc warnings by default...
         CFLAGS="$CFLAGS -Wall"
 	# And disable the strict-aliasing optimization, since it breaks
 	# our sockaddr-handling code in strange ways.
-	CFLAGS="$CFLAGS -fno-strict-aliasing"
+	if test x$have_gcc295 = xyes; then
+		CFLAGS="$CFLAGS -fno-strict-aliasing"
+	fi
 fi
 
 # OS X Lion started deprecating the system openssl. Let's just disable
