--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
 Uploaders: Leo Costela <costela@debian.org>
-Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), autotools-dev, libssl-dev
+Build-Depends: debhelper (>= 9), autotools-dev, libssl-dev
 Standards-Version: 3.9.3
 Homepage: http://libevent.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libevent.git
@@ -28,7 +28,6 @@ Package: libevent-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Multi-Arch: same
 Depends: ${misc:Depends}, libevent-2.0-5 (= ${binary:Version}),
  libevent-core-2.0-5 (= ${binary:Version}),
  libevent-extra-2.0-5 (= ${binary:Version}),
@@ -44,8 +43,6 @@ Description: Asynchronous event notification library (debug symbols)
 Package: libevent-2.0-5
 Priority: standard
 Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Asynchronous event notification library
  Libevent is an asynchronous event notification library that provides a
@@ -63,8 +60,6 @@ Description: Asynchronous event notification library
 
 Package: libevent-core-2.0-5
 Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Asynchronous event notification library (core)
  Libevent is an asynchronous event notification library that provides a
@@ -83,8 +78,6 @@ Description: Asynchronous event notification library (core)
 
 Package: libevent-extra-2.0-5
 Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
  libevent-core-2.0-5 (= ${binary:Version})
 Description: Asynchronous event notification library (extra)
@@ -104,8 +97,6 @@ Description: Asynchronous event notification library (extra)
 
 Package: libevent-pthreads-2.0-5
 Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
  libevent-core-2.0-5 (= ${binary:Version})
 Description: Asynchronous event notification library (pthreads)
@@ -123,8 +114,6 @@ Description: Asynchronous event notification library (pthreads)
 
 Package: libevent-openssl-2.0-5
 Architecture: any
-Multi-Arch: same
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
  libevent-core-2.0-5 (= ${binary:Version})
 Description: Asynchronous event notification library (openssl)
