--- a/debian/control
+++ b/debian/control
@@ -12,11 +12,11 @@ Vcs-Git: git://git.debian.org/git/collab-maint/libevent.git
 Package: libevent-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, libevent-2.0-5 (= ${binary:Version}),
- libevent-core-2.0-5 (= ${binary:Version}),
- libevent-extra-2.0-5 (= ${binary:Version}),
- libevent-pthreads-2.0-5 (= ${binary:Version}),
- libevent-openssl-2.0-5 (= ${binary:Version})
+Depends: ${misc:Depends}, libevent-2.1 (= ${binary:Version}),
+ libevent-core-2.1 (= ${binary:Version}),
+ libevent-extra-2.1 (= ${binary:Version}),
+ libevent-pthreads-2.1 (= ${binary:Version}),
+ libevent-openssl-2.1 (= ${binary:Version})
 Description: Asynchronous event notification library (development files)
  Libevent is an asynchronous event notification library that provides a 
  mechanism to execute a callback function when a specific event occurs
@@ -28,11 +28,11 @@ Package: libevent-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: ${misc:Depends}, libevent-2.0-5 (= ${binary:Version}),
- libevent-core-2.0-5 (= ${binary:Version}),
- libevent-extra-2.0-5 (= ${binary:Version}),
- libevent-pthreads-2.0-5 (= ${binary:Version}),
- libevent-openssl-2.0-5 (= ${binary:Version})
+Depends: ${misc:Depends}, libevent-2.1 (= ${binary:Version}),
+ libevent-core-2.1 (= ${binary:Version}),
+ libevent-extra-2.1 (= ${binary:Version}),
+ libevent-pthreads-2.1 (= ${binary:Version}),
+ libevent-openssl-2.1 (= ${binary:Version})
 Description: Asynchronous event notification library (debug symbols)
  Libevent is an asynchronous event notification library that provides a 
  mechanism to execute a callback function when a specific event occurs
@@ -40,7 +40,7 @@ Description: Asynchronous event notification library (debug symbols)
  .
  This package includes debugging information for libevent.
 
-Package: libevent-2.0-5
+Package: libevent-2.1
 Priority: standard
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -58,7 +58,7 @@ Description: Asynchronous event notification library
  the libevent library that includes everything in libevent_core and
  libevent_extra.
 
-Package: libevent-core-2.0-5
+Package: libevent-core-2.1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Asynchronous event notification library (core)
@@ -76,10 +76,10 @@ Description: Asynchronous event notification library (core)
  If you're writing software that only uses libevent's event loop, you
  should link against only the libevent_core library.
 
-Package: libevent-extra-2.0-5
+Package: libevent-extra-2.1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- libevent-core-2.0-5 (= ${binary:Version})
+ libevent-core-2.1 (= ${binary:Version})
 Description: Asynchronous event notification library (extra)
  Libevent is an asynchronous event notification library that provides a
  mechanism to execute a callback function when a specific event occurs
@@ -95,10 +95,10 @@ Description: Asynchronous event notification library (extra)
  If you're writing software that uses libevent's protocol support, you
  need to link libevent_core and libevent_extra as well.
 
-Package: libevent-pthreads-2.0-5
+Package: libevent-pthreads-2.1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- libevent-core-2.0-5 (= ${binary:Version})
+ libevent-core-2.1 (= ${binary:Version})
 Description: Asynchronous event notification library (pthreads)
  Libevent is an asynchronous event notification library that provides a
  mechanism to execute a callback function when a specific event occurs
@@ -112,10 +112,10 @@ Description: Asynchronous event notification library (pthreads)
  to link against the libevent_pthreads library in addition to
  libevent_core.
 
-Package: libevent-openssl-2.0-5
+Package: libevent-openssl-2.1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- libevent-core-2.0-5 (= ${binary:Version})
+ libevent-core-2.1 (= ${binary:Version})
 Description: Asynchronous event notification library (openssl)
  Libevent is an asynchronous event notification library that provides a
  mechanism to execute a callback function when a specific event occurs
