--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,13 @@ config.h.in
 configure
 /test/regress.gen.c
 /test/regress.gen.h
+/compile
+/config.guess
+/config.sub
+/depcomp
+/install-sh
+/ltmain.sh
+/m4/libtool.m4
+/m4/ltoptions.m4
+/m4/ltversion.m4
+/missing
