--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Leo Costela <costela@debian.org>
 Build-Depends: debhelper (>= 8), autotools-dev, libssl-dev
 Standards-Version: 3.9.2
 Homepage: http://libevent.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libevent.git
-Vcs-Git: git://git.debian.org/git/collab-maint/libevent.git
+Vcs-Browser: https://github.com/azat/libevent-deb
+Vcs-Git: git@github.com:azat/libevent-deb.git
 
 Package: libevent-dev
 Section: libdevel
