--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: libevent
 Section: libs
 Priority: optional
-Maintainer: Azat Khuzhin <a3at.mail@gmail.com>
+Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
+Changed-By: Azat Khuzhin <a3at.mail@gmail.com>
 Build-Depends: debhelper (>= 8), autotools-dev, libssl-dev
 Standards-Version: 3.9.2
 Homepage: http://libevent.org/
