--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,8 @@
 
 #export DH_VERBOSE=1
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed,--no-undefined,--no-add-needed
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+#,--no-undefined,--no-add-needed
 
 %:
 	dh $@ --with autotools-dev
