--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: libevent
 Section: libs
 Priority: optional
 Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
+Changed-By: Azat Khuzhin <a3at.mail@gmail.com>
 Uploaders: Leo Costela <costela@debian.org>
 Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), autotools-dev, libssl-dev
 Standards-Version: 3.9.3
