--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,6 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--enable-libevent-regress \
 		$(shell dpkg-buildflags --export=configure)
 
 override_dh_strip:
@@ -18,3 +17,5 @@ override_dh_strip:
 
 override_dh_builddeb:
 	dh_builddeb -- -Zbzip2 -z9
+
+override_dh_auto_test:
