--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
+		--disable-debug-mode \
 		$(shell dpkg-buildflags --export=configure)
 
 override_dh_strip:
