--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
 Changed-By: Azat Khuzhin <a3at.mail@gmail.com>
 Uploaders: Leo Costela <costela@debian.org>
-Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), autotools-dev, libssl-dev
+Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), cmake, libssl-dev
 Standards-Version: 3.9.3
 Homepage: http://libevent.org/
 Vcs-Browser: https://github.com/azat/libevent-deb
